11/18/12 immutable Point2D
11/18/12 delete unused variants of bar magnet display object, use "combination inheritance" version
11/18/12 wire up bar magnet model to view
11/18/12 refine Property.js
11/16/12 first wag at implementing observable properties
11/16/12 first wag at bar magnet model element
11/16/12 try another pattern ("Parasitic Combination Inheritance") for the bar magnet display object
11/16/12 delete Easel text
11/16/12 try another pattern ("Combination Inheritance") for the bar magnet display object
11/16/12 drag the bar magnet (with SR)
11/16/12 add bar magnet image
11/16/12 add some text to the canvas using Easel
11/16/12 add some text to the canvas, using Canvas directly
11/16/12 set up project directory structure and top-level html & js files