@@ -1,3 +1,6 @@
+11/18/12 complete synchronization of bar magnet model and view
+11/18/12 derive a generalized drag handler from SR's easel-util, delete copy of easel-util
+11/18/12 replace Point2D with Easel.Point
 11/18/12 immutable Point2D
 11/18/12 delete unused variants of bar magnet display object, use "combination inheritance" version
 11/18/12 wire up bar magnet model to view
